<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimulateActivity">

    <Button
        android:id="@+id/w3_start_stop_button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start"
        android:drawableStart="@android:drawable/ic_media_play"
        android:drawableEnd="@android:drawable/ic_media_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/w3_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w3_info_text">

        <TextView
            android:id="@+id/w3_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/interest"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/w3_seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <SeekBar
            android:id="@+id/w3_seekBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="132dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:max="100"
            android:min="0"
            android:progress="0"
            app:layout_constraintBottom_toTopOf="@+id/w3_amount_text"
            app:layout_constraintEnd_toStartOf="@+id/w3_interest"
            app:layout_constraintStart_toEndOf="@+id/w3_textView1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/w3_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/_0"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/w3_seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/w3_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/s"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/w3_amount_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/w3_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/amount"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/w3_textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/w3_rest_payment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="TextView"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/w3_start_stop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/w3_dollar_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dolar"
        app:layout_constraintBottom_toBottomOf="@+id/w3_debtor_wallet_iamge"
        app:layout_constraintStart_toStartOf="@+id/w3_debtor_wallet_iamge"
        app:srcCompat="@drawable/dolar"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/w3_debtor_wallet_iamge"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/debtor_walet"
        app:layout_constraintBottom_toTopOf="@+id/w3_rest_payment_text"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/debtor_walet1" />

    <ImageView
        android:id="@+id/w3_my_wallet_iamge"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/my_walet"
        app:layout_constraintBottom_toTopOf="@+id/w3_rest_payment_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/my_walet1" />

    <TextView
        android:id="@+id/w3_debtor_wallet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/w3_debtor_wallet_iamge"
        app:layout_constraintStart_toStartOf="@+id/w3_debtor_wallet_iamge"
        app:layout_constraintTop_toBottomOf="@+id/w3_debtor_wallet_iamge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_walet"
        app:layout_constraintEnd_toEndOf="@+id/w3_my_wallet_iamge"
        app:layout_constraintStart_toStartOf="@+id/w3_my_wallet_iamge"
        app:layout_constraintTop_toBottomOf="@+id/w3_my_wallet_iamge" />




</androidx.constraintlayout.widget.ConstraintLayout>