<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/dialog_ok"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/ok"
            app:layout_constraintBottom_toTopOf="@+id/w2_simulate_button"
            app:layout_constraintEnd_toStartOf="@+id/w2_cancel_button"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/dialog_cancel"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/w2_simulate_button"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/dialog_increase"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dialog_up"
        android:contentDescription="@string/increase_interest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dialog_decrease"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dialog_down"
        android:contentDescription="@string/decrease_interest"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dialog_interest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/dialog_decrease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_increase" />

</androidx.constraintlayout.widget.ConstraintLayout>